# cognitive-robot-os-safety-governor

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
components/behavior-fsm/: Cargo.toml
components/behavior-fsm/src/: lib.rs
components/brain-os-abi/: Cargo.toml
components/brain-os-abi/src/: lib.rs
components/cartpole-policy/: Cargo.toml
components/cartpole-policy/src/: lib.rs  weights.rs
components/cartpole-sim/: Cargo.toml
components/cartpole-sim/src/: lib.rs  mujoco_twin.rs
components/clearance-guard/: Cargo.toml
components/clearance-guard/src/: lib.rs
components/contextual-guard/: Cargo.toml
components/contextual-guard/src/: lib.rs
components/hal/: Cargo.toml
components/hal/src/: lib.rs
components/humanoid-policy/: Cargo.toml
components/humanoid-policy/src/: lib.rs  weights.rs
components/imu-filter/: Cargo.toml
components/imu-filter/src/: lib.rs
components/memory/: Cargo.toml
components/memory/examples/: bench.rs  persist_demo.rs
components/memory/src/: lib.rs  persist.rs  tiers.rs
components/mujoco-pendulum-policy/: Cargo.toml
components/mujoco-pendulum-policy/examples/: transfer_probe.rs
components/mujoco-pendulum-policy/src/: lib.rs  weights.rs
components/nav-policy/: Cargo.toml
components/nav-policy/src/: lib.rs  weights.rs
components/neural-safety/: Cargo.toml
components/neural-safety/src/: lib.rs
components/ood-detector/: Cargo.toml
components/ood-detector/src/: lib.rs
components/perception/: Cargo.toml
components/perception/src/: lib.rs  weights.rs
components/policy/: Cargo.toml
components/policy/src/: lib.rs  weights.rs
components/reactive-evasion/: Cargo.toml
components/reactive-evasion/src/: lib.rs
components/reflex-abi/: Cargo.toml
components/reflex-abi/src/: lib.rs
components/safety-memory/: Cargo.toml
components/safety-memory/src/: lib.rs
components/safety-model/: Cargo.toml
components/safety-model/src/: lib.rs
components/sel4-actuation-pd/: Cargo.toml
components/sel4-actuation-pd/.cargo/: config.toml
components/sel4-actuation-pd/src/: main.rs
components/sel4-guard-pd/: Cargo.toml
components/sel4-guard-pd/src/: main.rs
components/sel4-memory-pd/: Cargo.toml
components/sel4-memory-pd/src/: main.rs
components/walker-policy/: Cargo.toml
components/walker-policy/src/: lib.rs  weights.rs
components/world-memory/: Cargo.toml
components/world-memory/src/: lib.rs
docs/: ENVIRONMENT.md  EVALUATION.md  EXPERIMENTS.md  FORMAL_GUARANTEES.md  REPOSITORY_MAP.md  REPRODUCE.md  VERIFICATION.md
drivers/: camera_sensor.py
drivers/pi4-body/: Cargo.toml
drivers/pi4-body/src/: lib.rs
drivers/pi4-hal/: Cargo.toml
drivers/pi4-hal/src/: lib.rs
kernel/: reflex-hw.system  reflex.system
paper/: paper.bib  paper.md
results/: README.md
results/reference/: 00-toolchain.txt  A-proptest-clearance-guard.txt  A-proptest-safety-memory.txt  A-proptest-safety-model.txt  B-sil-eval.txt  C-sil-experiments.txt  D-sil-ablation.txt  E-bench-guard.txt  F-sil-stress.txt
scripts/: build.sh  md2pdf.py  reproduce.sh
sim/: car_arena.xml  car_drive.py  car_env.py  car_rl_watch.py  minecraft_env.py  minecraft_steve.xml  minecraft_world.xml  train_steve.py  view_cartpole.py  view_coverage.py  watch_mujoco.py  watch_steve_live.py
sim/bench-guard/: Cargo.toml
sim/bench-guard/src/: main.rs
sim/sil-ablation/: Cargo.toml
sim/sil-ablation/src/: main.rs
sim/sil-adaptive-safety/: Cargo.toml
sim/sil-adaptive-safety/src/: main.rs
sim/sil-adversarial/: Cargo.toml
sim/sil-adversarial/src/: main.rs
sim/sil-born-cautious/: Cargo.toml
sim/sil-born-cautious/src/: main.rs
sim/sil-campaign/: Cargo.toml
sim/sil-campaign/src/: main.rs
sim/sil-cartpole/: Cargo.toml  cartpole_trajectory.csv
sim/sil-cartpole/src/: main.rs
sim/sil-clearance/: Cargo.toml
sim/sil-clearance/src/: main.rs
sim/sil-coverage/: Cargo.toml
sim/sil-coverage/src/: main.rs
sim/sil-eval/: Cargo.toml
sim/sil-eval/src/: main.rs
sim/sil-experiments/: Cargo.toml
sim/sil-experiments/src/: main.rs
sim/sil-generalize/: Cargo.toml
sim/sil-generalize/src/: main.rs
sim/sil-nav-guarded/: Cargo.toml
sim/sil-nav-guarded/src/: main.rs
sim/sil-ood/: Cargo.toml
sim/sil-ood/src/: main.rs
sim/sil-realworld/: Cargo.toml
sim/sil-realworld/src/: main.rs
sim/sil-skill/: Cargo.toml
sim/sil-skill/src/: main.rs
sim/sil-stress/: Cargo.toml
sim/sil-stress/src/: main.rs
sim/sil-world/: Cargo.toml
sim/sil-world/src/: main.rs
training/: README.md  export_car_policy.py  train_car.py  train_cartpole.py  train_encoder.py  train_humanoid.py  train_mujoco_pendulum.py  train_policy.py  train_walker.py
