[package]
name = "clearance-guard"
version = "0.1.0"
edition = "2021"
description = "Model-agnostic clearance barrier: caps speed so the robot can always brake before violating a minimum clearance. no_std, seL4-ready."
license = "MIT"

[lib]
name = "clearance_guard"
path = "src/lib.rs"

[dependencies]
libm = "0.2"

[dev-dependencies]
proptest = "1"

# `cfg(kani)` is active only under `cargo kani`; declared here so static analysis accepts it (-D warnings).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
