[package]
name = "mujoco-pendulum-policy"
version = "0.1.0"
edition = "2021"
description = "no_std neural policy trained on real MuJoCo physics (InvertedPendulum)"
license = "MIT"

[lib]
name = "mujoco_pendulum_policy"
path = "src/lib.rs"

[dev-dependencies]
cartpole-sim = { path = "../cartpole-sim" }
