[package]
name = "safety-model"
version = "0.1.0"
edition = "2021"
description = "Generalizing danger model on egocentric features (learns, not memorizes) — tightening-only, no_std, seL4-ready"
license = "MIT"

[lib]
name = "safety_model"
path = "src/lib.rs"

[dependencies]
libm = "0.2"

[dev-dependencies]
proptest = "1"

# `cfg(kani)` is active only under `cargo kani`; declared here so static analysis accepts it (-D warnings).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[profile.release]
opt-level = 3
lto = true
