[package]
name = "bench-guard"
version = "0.1.0"
edition = "2021"
description = "Empirical latency/jitter of one guard decision (same no_std crates as seL4) — real numbers, not architectural"
license = "MIT"

[[bin]]
name = "bench-guard"
path = "src/main.rs"

[dependencies]
safety-model = { path = "../../components/safety-model" }
safety-memory = { path = "../../components/safety-memory" }
clearance-guard = { path = "../../components/clearance-guard" }

[profile.release]
opt-level = 3
lto = true
