[package]
name = "sil-campaign"
version = "0.1.0"
edition = "2021"
description = "Evaluation campaign: Risk-Map baseline, hyperparameter sensitivity, capacity scaling, catastrophic poisoning, OOD-shift curve, memory-variant ablation"
license = "MIT"

[dependencies]
clearance-guard = { path = "../../components/clearance-guard" }
safety-memory = { path = "../../components/safety-memory" }
ood-detector = { path = "../../components/ood-detector" }
libm = "0.2"

[profile.release]
opt-level = 3
lto = true
