[package]
name = "sil-experiments"
version = "0.1.0"
edition = "2021"
description = "Full experiment battery: ablation, transfer, stress/breaking-point, adversarial, forgetting, memory-size, compute, failure-injection"
license = "MIT"

[[bin]]
name = "sil-experiments"
path = "src/main.rs"

[dependencies]
safety-memory = { path = "../../components/safety-memory" }
clearance-guard = { path = "../../components/clearance-guard" }
libm = "0.2"

[profile.release]
opt-level = 3
